--- a/style.css
+++ b/style.css
@@ -68,11 +68,8 @@ a{
     width: 400px;
 }
 
-.sign-up{
-    display: flex;
-    color: #F9FAF8;
+.first-button{
     padding: 0 48px;
-    width: 500px;
 }
 
 .placeholder-img{
@@ -91,20 +88,20 @@ a{
 .content-header{
     display: flex;
     flex-direction: column;
-    margin-top: 100px;
+    margin-top: 50px;
     margin-left: 300px;
     margin-bottom: 125px;
 }
 
-button{
+.content-header button{
     border: 1px solid #1F2937;
-    height: 35px;
-    width: 100px;
     border-radius: 10px;
     background-color: #3882F6;
     color: #F9FAF8;
     font-size: 15px;
     font-weight: 900;
+    height: 35px;
+    width: 100px;
 }
 
 .title{
@@ -172,16 +169,63 @@ span.subtext{
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 100%;
+    height: 300px;
 }
 
 .call-to-action{
     display: flex;
     background-color: #3882F6;
-    width: 600px;
+    width: 800px;
+    border: 1px solid #F9FAF8;
+    border-radius: 10px;
+    padding: 48px;
+    gap: 250px;
 }
 
-.second-button{
-    border: 1px solid #F9FAF8;
-    border-color: #F9FAF8;
+.call-to-action button{
+    border: 1px solid #E5E7EB;
     border-radius: 10px;
+    background-color: #3882F6;
+    color: #F9FAF8;
+    font-size: 15px;
+    font-weight: 900;
+    height: 35px;
+    width: 100px;
+}
+
+.third-text{
+    display: flex;
+    flex-direction: column;
+}
+
+.time{
+    color: #E5E7EB;
+    font-weight: 900;
+    margin-bottom: 5px;
+}
+
+.sign{
+    color: #E5E7EB;
+    font-size: 12px;
+}
+
+.footer{
+    background-color: #1F2937;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #E5E7EB;
+    height: 100px;
+}
+
+.main-img{
+    width: 600px;
+    height: 300px;
+}
+
+.content{
+    display: flex;
+    margin-top: 96px;
+    gap: 32px;
 }
